--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <div class="main-slider-one__content">
                             <h5 class="main-slider-one__sub-title">SCALE YOUR BUSINESS </h5>
                             <!-- slider-sub-title -->
-                            <h2 class="main-slider-one__title">Think Digital</h2><!-- slider-title -->
+                            <h2 class="main-slider-one__title">Fly Digital</h2><!-- slider-title -->
                             <p class="main-slider-one__text">
                                 Partner with MPL Technologies – your web development experts delivering exceptional websites, e-commerce platforms, and mobile apps that drive results for businesses worldwide.
                             </p><!-- slider-text -->
@@ -577,9 +577,9 @@ __SVGATOR_PLAYER__.build({"root":"ewyj3oh1je3c1","animations":[{"duration":8500,
             <div class="container tabs-box">
                 <div class="sec-title text-center">
 
-                    <h6 class="sec-title__tagline">our services</h6><!-- /.sec-title__tagline -->
+                    <h6 class="sec-title__tagline">Curious how MPL Tech unlocks solutions to grow your business?</h6><!-- /.sec-title__tagline -->
 
-                    <h3 class="sec-title__title">Our Services Solve Any<br> Business Problem</h3><!-- /.sec-title__title -->
+                    <h3 class="sec-title__title">Click and Open the Mystery Box</h3><!-- /.sec-title__title -->
                 </div><!-- /.sec-title -->
                 <!-- <ul class="list-unstyled tab-buttons service-one__tabs">
                     <li data-tab="#building" class="tab-btn">link building</li>
