Text changes and service details added

--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MPL Technologies</title>
+    <title>MPL Softwares</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Transform your business with MPL Technologies – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
+    <meta name="description" content="Transform your business with MPL Softwares – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -154,7 +154,11 @@
 
                                 <h6 class="sec-title__tagline">About Us</h6><!-- /.sec-title__tagline -->
 
-                                <h3 class="sec-title__title">We’re Strategic Digital Marketing Agency</h3><!-- /.sec-title__title -->
+                                <h3 class="sec-title__title">We're 
+                                    inspiring
+                                    creative
+                                    fun
+                                    helpful</h3><!-- /.sec-title__title -->
                             </div><!-- /.sec-title -->
                             <p class="about-one__content__text">
                                 In order to scale new customer acquisition and retention for e-commerce brands, we work across
@@ -179,9 +183,9 @@
                             
                         </div><!-- /.why-choose-two__content -->
                     </div><!-- /.col-lg-6 -->
-                    <div class="col-lg-6">
-                        <div class="about-one__image wow fadeInRight" data-wow-delay="200ms">
-                            <div class="about-one__image__bg" style="background-image: url(assets/images/mpl_house.png);background-size: contain;background-repeat: no-repeat;width: 500px">
+                    <div class="col-lg-6 wow fadeInRight" data-wow-delay="200ms">
+                        <div class="about-one__image">
+                            <div class="about-one__image__bg" style="background-image: url(assets/images/mpl_house.png);background-size: contain;background-repeat: no-repeat;width: 500px;position: relative;top: 0;">
                                 <!-- <img src="assets/images/mpl_house.png" alt="growim"> -->
                             </div>
                             
@@ -293,7 +297,7 @@
                     <div class="item">
                         <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='000ms'>
                             <div class="team-card-four__image">
-                                <img src="assets/images/team/team-4-1.png" alt="Leslie Alexander">
+                                <img src="assets/images/team1.svg" alt="Leslie Alexander">
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
@@ -324,7 +328,7 @@
                     <div class="item">
                         <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='1.5k'>
                             <div class="team-card-four__image">
-                                <img src="assets/images/team/team-4-2.png" alt="Kristin Watson">
+                                <img src="assets/images/team4.svg" alt="Kristin Watson">
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
@@ -355,7 +359,7 @@
                     <div class="item">
                         <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
                             <div class="team-card-four__image">
-                                <img src="assets/images/team/team-4-3.png" alt="Brooklyn Simmons">
+                                <img src="assets/images/team3.svg" alt="Brooklyn Simmons">
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
@@ -426,7 +430,7 @@
                         <div class="col-md-6 col-xl-4">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/m.svg" width="50" alt="MPL technologies">
+                                    <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
                                     We’re Strategic Digital Marketing Agency
@@ -497,7 +501,7 @@
                 <div class="container">
                     <div class="main-footer__bottom__inner">
                         <p class="main-footer__copyright">
-                            &copy; Copyright <span class="dynamic-year"></span> by MPL Technologies.
+                            &copy; Copyright <span class="dynamic-year"></span> by MPL Softwares.
                         </p>
                         <ul class="main-footer__bottom__menu">
                             <li><a href="checkout.html">Terms & Conditions</a></li>
