--- a/services.html
+++ b/services.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MPL Technologies</title>
+    <title>MPL Softwares</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Transform your business with MPL Technologies – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
+    <meta name="description" content="Transform your business with MPL Softwares – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -136,10 +136,10 @@
             
             <!-- /.page-header__bg -->
             <div class="container">
-                <h2 class="page-header__title">About Us</h2>
+                <h2 class="page-header__title">Services</h2>
                 <ul class="growim-breadcrumb list-unstyled">
                     <li><a href="index.html">Home</a></li>
-                    <li><span>About Us</span></li>
+                    <li><span>Services</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
         </section>
@@ -486,7 +486,7 @@
                         <div class="col-md-6 col-xl-4">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/m.svg" width="50" alt="MPL technologies">
+                                    <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
                                     We’re Strategic Digital Marketing Agency
@@ -557,7 +557,7 @@
                 <div class="container">
                     <div class="main-footer__bottom__inner">
                         <p class="main-footer__copyright">
-                            &copy; Copyright <span class="dynamic-year"></span> by MPL Technologies.
+                            &copy; Copyright <span class="dynamic-year"></span> by MPL Softwares.
                         </p>
                         <ul class="main-footer__bottom__menu">
                             <li><a href="checkout.html">Terms & Conditions</a></li>
