--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <div class="custom-cursor__cursor-two"></div>
 
     <div class="preloader">
-        <div class="preloader__image" style="background-image: url(assets/images/loader.png);"></div>
+        <div class="preloader__image" style="background-image: url(assets/images/loader.svg);"></div>
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -58,7 +58,7 @@
                             <img src="assets/images/m.svg" alt="Growim" width="50">
                             <div class="logo-text">
                                 <h1>MPL</h1>
-                                <p>Technologies</p>
+                                <p>Softwares</p>
                             </div>
                         </a>
                     </div><!-- /.main-header__logo -->
