--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <div class="custom-cursor__cursor-two"></div>
 
     <div class="preloader">
-        <div class="preloader__image" style="background-image: url(assets/images/loader.png);"></div>
+        <div class="preloader__image" style="background-image: url(assets/images/loader.svg);"></div>
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -58,7 +58,7 @@
                             <img src="assets/images/m.svg" alt="Growim" width="50">
                             <div class="logo-text">
                                 <h1>MPL</h1>
-                                <p>Technologies</p>
+                                <p>Softwares</p>
                             </div>
                         </a>
                     </div><!-- /.main-header__logo -->
@@ -137,10 +137,10 @@
             <!-- /.page-header__bg -->
             <div class="container">
                 <h2 class="page-header__title">Contact Us</h2>
-                <ul class="growim-breadcrumb list-unstyled">
+                <!-- <ul class="growim-breadcrumb list-unstyled">
                     <li><a href="index.html">Home</a></li>
                     <li><span>About Us</span></li>
-                </ul><!-- /.thm-breadcrumb list-unstyled -->
+                </ul> -->
             </div><!-- /.container -->
         </section>
 
@@ -167,8 +167,8 @@
                     <div class="col-lg-6" style="margin-top: -12%;">
                         <div class="contact-two__content">
                             <h3 class="contact-two__title">We'll respond to you in an hour.</h3>
-                            <p class="contact-two__text">Neque porro est qui dolorem ipsum quia quaed inventor veritatis et</p>
-                            <form class="contact-two__form contact-form-validated form-one wow fadeInUp" data-wow-duration="1500ms" action="https://www.medmarketify.com/inc/sendemail.php">
+                            <p class="contact-two__text">Our dedicated team provides quick and accurate responses to all your inquiries, 24/7.</p>
+                            <form class="contact-two__form contact-form-validated form-one wow fadeInUp" data-wow-duration="1500ms" action="sendemail.php">
                                 <h4 class="contact-two__form__title">Get In touch</h4>
                                 <div class="form-one__group">
                                     <div class="form-one__control">
