--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
                             <img src="assets/images/m.svg" alt="Growim" width="50">
                             <div class="logo-text">
                                 <h1>MPL</h1>
-                                <p>Technologies</p>
+                                <p>Softwares</p>
                             </div>
                         </a>
                     </div><!-- /.main-header__logo -->
