--- a/index.html
+++ b/index.html
@@ -1352,7 +1352,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                         </div>
                         <div class="col-lg-7 col-xl-6">
                             <div class="mail-section__form">
-                                <h3 class="mail-section__form__title">Subscribe To Our Newsletter!</h3>
+                                <h3 class="mail-section__form__title">Let's talk</h3>
                                 <form action="#" data-url="MAILCHIMP_FORM_URL" class="mc-form">
                                     <input type="text" name="EMAIL" placeholder="Enter Email Address">
                                     <button type="submit" class="flaticon-paper-plan">
