--- a/portfolio.html
+++ b/portfolio.html
@@ -394,7 +394,7 @@
                         </div>
                         <div class="col-lg-7 col-xl-6">
                             <div class="mail-section__form">
-                                <h3 class="mail-section__form__title">Subscribe To Our Newsletter!</h3>
+                                <h3 class="mail-section__form__title">Let's talk</h3>
                                 <form action="#" data-url="MAILCHIMP_FORM_URL" class="mc-form">
                                     <input type="text" name="EMAIL" placeholder="Enter Email Address">
                                     <button type="submit" class="flaticon-paper-plan">
