--- a/about.html
+++ b/about.html
@@ -147,32 +147,20 @@
 
                                 <h6 class="sec-title__tagline">About Us</h6><!-- /.sec-title__tagline -->
 
-                                <h3 class="sec-title__title">We're 
-                                    inspiring
-                                    creative
-                                    fun
-                                    helpful</h3><!-- /.sec-title__title -->
+                                <h3 class="sec-title__title anime-title">We're 
+                                    <div id=flip>
+                                    <div><div>creative</div></div>
+                                    <div><div>inspiring</div></div>
+                                    <div><div>fun</div></div>
+                                    <!-- <div><div>helpful</div></div> -->
+                                  </div>
+                                </h3><!-- /.sec-title__title -->
                             </div><!-- /.sec-title -->
                             <p class="about-one__content__text">
-                                In order to scale new customer acquisition and retention for e-commerce brands, we work across
-                                the entire customer journey. Our team has a successful track record of helping brands scale
+                                We are a team of tech masterminds who bring experience from top global corporations into a creative, high-energy workspace. At MPL Technologies, innovation thrives, and every project is crafted with precision and passion.
                             </p>
-                            <ul class="about-one__list">
-                                <li>
-                                    <div class="about-one__list__icon"><img src="assets/images/shapes/about-1-icon-1.png" alt="growim"></div>
-                                    <div class="about-one__list__content">
-                                        <h3 class="about-one__list__number">94%</h3>
-                                        <p class="about-one__list__text">Sms Marketing</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="about-one__list__icon"><img src="assets/images/shapes/about-1-icon-2.png" alt="growim"></div>
-                                    <div class="about-one__list__content">
-                                        <h3 class="about-one__list__number">65%</h3>
-                                        <p class="about-one__list__text">Cover Marketing</p>
-                                    </div>
-                                </li>
-                            </ul>
+                            <p>From brainstorming to delivery, we combine cutting-edge technology and years of expertise to help your business scale and succeed.</p>
+                            <p>Small Team, Big Impact. 🚀                            </p>
                             
                         </div><!-- /.why-choose-two__content -->
                     </div><!-- /.col-lg-6 -->
