--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6" style="margin-top: -12%;">
                         <div class="contact-two__content">
-                            <h3 class="contact-two__title">We'll respond to you in an hour.</h3>
+                            <h3 class="contact-two__title"><sup>24/7</sup> Active – Response Within 1 Hour!</h3>
                             <p class="contact-two__text">Our dedicated team provides quick and accurate responses to all your inquiries, 24/7.</p>
                             <form class="contact-two__form contact-form-validated form-one wow fadeInUp" data-wow-duration="1500ms" action="sendemail.php">
                                 <h4 class="contact-two__form__title">Get In touch</h4>
@@ -193,57 +193,48 @@
 
         <section class="google-map">
             <div class="google-map__contact">
-                <iframe title="template google map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd" class="map__contact" allowfullscreen></iframe>
+                
+                <!-- <iframe title="template google map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd" class="map__contact" allowfullscreen></iframe> -->
             </div>
             <!-- /.google-map -->
             <div class="google-map__wrapper">
                 <div class="container">
-                    <div class="google-map__info">
-                        <h3 class="google-map__info__title">Contact Info</h3>
-                        <ul class="list-unstyled google-map__info__list">
-                            <li><i class="flaticon-pin"></i>Gregory Cartwright, 4059 Carling Avenue, Ugglebarnby</li>
-                            <li><i class="flaticon-phone"></i><a href="tel:+61086660112">+6108-666-0112</a></li>
-                            <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
-                        </ul>
-                    </div>
+                    <div class="locations">
+                        <div class="google-map__info">
+                            <h3 class="google-map__info__title">US</h3>
+                            <ul class="list-unstyled google-map__info__list">
+                                <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170</li>
+                                <li><i class="flaticon-phone"></i><a href="tel:+1 (469) 263 0399">+1 (469) 263 0399</a></li>
+                                <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="google-map__info">
+                            <h3 class="google-map__info__title">UAE</h3>
+                            <ul class="list-unstyled google-map__info__list">
+                                <li><i class="flaticon-pin"></i>509, IT Plaza, Dubai Silicon Oasis</li>
+                                <li><i class="flaticon-phone"></i><a href="tel:+61086660112">+6108-666-0112</a></li>
+                                <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="google-map__info">
+                            <h3 class="google-map__info__title">India</h3>
+                            <ul class="list-unstyled google-map__info__list">
+                                <li><i class="flaticon-pin"></i>No 5, RH constructions, Chrompet, Chennai - 44</li>
+                                <li><i class="flaticon-phone"></i><a href="tel:+61086660112">+6108-666-0112</a></li>
+                                <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
+                            </ul>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </section><!-- /.google-map -->
 
-        <section class="mail-section">
-            <div class="container">
-                <div class="mail-section__inner  wow fadeInUp">
-                    <div class="mail-section__shape-one" style="background-image: url(assets/images/shapes/mail-shape-1.png);"></div>
-                    <div class="mail-section__shape-two" style="background-image: url(assets/images/shapes/mail-shape-2.png);"></div>
-                    <div class="mail-section__shape-three" style="background-image: url(assets/images/shapes/mail-shape-3.png);"></div>
-                    <div class="mail-section__shape-four" style="background-image: url(assets/images/shapes/mail-shape-4.png);"></div>
-                    <div class="row">
-                        <div class="col-lg-5 col-xl-6">
-                            <div class="mail-section__image">
-                                <img src="assets/images/happiness.png" alt="Growim">
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-xl-6">
-                            <div class="mail-section__form">
-                                <h3 class="mail-section__form__title">Let's talk</h3>
-                                <form action="#" data-url="MAILCHIMP_FORM_URL" class="mc-form">
-                                    <input type="text" name="EMAIL" placeholder="Enter Email Address">
-                                    <button type="submit" class="flaticon-paper-plan">
-                                        <span class="sr-only">submit</span><!-- /.sr-only -->
-                                    </button>
-                                </form><!-- /. mc-form -->
-                                <div class="mc-form__response"></div><!-- /.mc-form__response -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <footer class="main-footer">
             <div class="main-footer__bg" style="background-image: url(assets/images/shapes/footer-bg-1-1.png);"></div>
             <div class="main-footer__shape" style="background-image: url(assets/images/shapes/footer-1-shape-1.png);"></div>
             <!-- /.main-footer__bg -->
-            <div class="main-footer__top">
+            <div class="main-footer__top without-letstalk">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-xl-4">
@@ -316,7 +307,7 @@
                     </div><!-- /.row -->
                 </div><!-- /.container -->
             </div><!-- /.main-footer__top -->
-            <div class="main-footer__bottom">
+            <div class="main-footer__bottom ">
                 <div class="container">
                     <div class="main-footer__bottom__inner">
                         <p class="main-footer__copyright">
