--- a/services.html
+++ b/services.html
@@ -484,7 +484,7 @@ window.addEventListener("message", function (e) {
                     <ul class="flip-items">
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-1.png" alt="growim">
+                                <img src="assets/images/project1.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -496,7 +496,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-1.png" alt="growim">
+                                <img src="assets/images/project2.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -508,7 +508,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-2.png" alt="growim">
+                                <img src="assets/images/project3.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -520,7 +520,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-3.png" alt="growim">
+                                <img src="assets/images/project4.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -532,7 +532,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-4.png" alt="growim">
+                                <img src="assets/images/project5.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -544,7 +544,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-5.png" alt="growim">
+                                <img src="assets/images/project6.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -556,7 +556,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-1.png" alt="growim">
+                                <img src="assets/images/project2.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -568,7 +568,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-1.png" alt="growim">
+                                <img src="assets/images/project3.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -580,7 +580,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-2.png" alt="growim">
+                                <img src="assets/images/project4.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -592,7 +592,7 @@ window.addEventListener("message", function (e) {
                         </li>
                         <li>
                             <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-3.png" alt="growim">
+                                <img src="assets/images/project5.webp" alt="growim">
                                 <div class="portfolio-four__item__content">
                                     <h5 class="portfolio-four__item__cate">Technology</h5>
                                     <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
@@ -602,30 +602,7 @@ window.addEventListener("message", function (e) {
                                 </div><!-- /.portfolio-four__item__content -->
                             </div><!-- /.portfolio-four__item -->
                         </li>
-                        <li>
-                            <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-4.png" alt="growim">
-                                <div class="portfolio-four__item__content">
-                                    <h5 class="portfolio-four__item__cate">Technology</h5>
-                                    <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
-                                    <div class="portfolio-four__item__btn">
-                                        <a href="portfolio-details.html"><i class="flaticon-up-right-arrow"></i></a>
-                                    </div><!-- /.portfolio-four__item__btn -->
-                                </div><!-- /.portfolio-four__item__content -->
-                            </div><!-- /.portfolio-four__item -->
-                        </li>
-                        <li>
-                            <div class="portfolio-four__item">
-                                <img src="assets/images/portfolio/portfolio-4-5.png" alt="growim">
-                                <div class="portfolio-four__item__content">
-                                    <h5 class="portfolio-four__item__cate">Technology</h5>
-                                    <h3 class="portfolio-four__item__title"><a href="portfolio-details.html">App Development</a></h3>
-                                    <div class="portfolio-four__item__btn">
-                                        <a href="portfolio-details.html"><i class="flaticon-up-right-arrow"></i></a>
-                                    </div><!-- /.portfolio-four__item__btn -->
-                                </div><!-- /.portfolio-four__item__content -->
-                            </div><!-- /.portfolio-four__item -->
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -806,7 +783,7 @@ window.addEventListener("message", function (e) {
         <div class="main-footer__bg" style="background-image: url(assets/images/shapes/footer-bg-1-1.png);"></div>
         <div class="main-footer__shape" style="background-image: url(assets/images/shapes/footer-1-shape-1.png);"></div>
         <!-- /.main-footer__bg -->
-        <div class="main-footer__top">
+        <div class="main-footer__top without-letstalk">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-xl-4">
